Tue Mar 25 22:09:45 1997  Tom Tromey  <tromey@cygnus.com>

	Update to follow GNU Standards:
	* automake.in (handle_man_pages): Use NORMAL_UNINSTALL before
	uninstall-man.
	* texinfos.am (uninstall-info): Use two loops, and have
	PRE_UNINSTALL before running install-info.
	* data.am, header.am, libs.am, lisp.am, ltlib.am, progs.am,
	scripts.am, texinfos.am: Use NORMAL_UNINSTALL.
	* header-vars.am (PRE_UNINSTALL, POST_UNINSTALL,
	NORMAL_UNINSTALL): Define.

	* automake.in (scan_one_configure_file): Don't define ANSI2KNR as
	a configure varriable.

	* m4/missing.m4: Run test in a subshell.  From Gord Matzigkeit.

Mon Mar 24 23:28:59 1997  Tom Tromey  <tromey@cygnus.com>

	* m4/sanity.m4: Sleep before creating temp file.

	* header-vars.am (NORMAL_INSTALL, PRE_INSTALL, POST_INSTALL):
	Define.

Sat Mar 22 00:06:00 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (am_install_var): Make sure to delete
	CYGWIN/NOTCYGWIN tokens as appropriate.
	(handle_programs): Remove NOTCYGWIN tokens as well.
	(file_contents_with_transform): A single newline makes an empty
	line.

	* program.am: Remove executable before linking.

	* texinfos.am (.texi.dvi): Look in @TEXINFODIR@ for texinfo.tex.
	(.texinfo.dvi): Likewise.

	* automake.in (handle_texinfo): TEXINFO_TEX variable can set
	location of texinfo.tex.

Fri Mar 21 10:22:51 1997  Tom Tromey  <tromey@cygnus.com>

	* texinfos.am (.texinfo.dvi): Mirror .texi.dvi.

	* ansi2knr.c, ansi2knr.1: New versions from L. Peter Deutsch.

	* scripts.am: Add @EXEEXT@ to installed scripts.

Wed Jan 22 20:12:31 1997  Jim Meyering  <meyering@na-net.ornl.gov>

	* m4/mktime.m4 (AM_FUNC_MKTIME): Run tests for each of a few values
	for the TZ environment variable.  Andre Novaes Cunha provided the
	hairy TZ setting that exercized the Solaris tzset bug.

1997-01-22  Paul Eggert  <eggert@twinsun.com>

	* m4/mktime.m4: (AM_FUNC_MKTIME): Fix bug in mktime test -- don't
	test now, test a couple of thousand times.
