@@ -3163,7 +3163,7 @@ sub handle_merge_targets
     $output_rules .= ("install-exec: "
 		      . join (' ', @install_exec)
 		      . "\n");
-    $output_rules .= "\t\$(NORMAL_INSTALL)\n";
+    $output_rules .= "\t\@\$(NORMAL_INSTALL)\n";
     if (defined $contents{'install-exec-hook'})
     {
 	$output_rules .= "\t" . '$(MAKE) install-exec-hook' . "\n";
@@ -3175,7 +3175,7 @@ sub handle_merge_targets
     $output_rules .= ("install-data: "
 		      . join (' ', @install_data)
 		      . "\n");
-    $output_rules .= "\t\$(NORMAL_INSTALL)\n";
+    $output_rules .= "\t\@\$(NORMAL_INSTALL)\n";
     if (defined $contents{'install-data-hook'})
     {
 	$output_rules .= "\t" . '$(MAKE) install-data-hook' . "\n";
