@@ -57,9 +57,9 @@ transform = @program_transform_name@
 
 ## These are defined because otherwise make on NetBSD V1.1 will print
 ## (eg): $(NORMAL_INSTALL) expands to empty string.
-NORMAL_INSTALL = @:
-PRE_INSTALL = @:
-POST_INSTALL = @:
-NORMAL_UNINSTALL = @:
-PRE_UNINSTALL = @:
-POST_UNINSTALL = @:
+NORMAL_INSTALL = true
+PRE_INSTALL = true
+POST_INSTALL = true
+NORMAL_UNINSTALL = true
+PRE_UNINSTALL = true
+POST_UNINSTALL = true
