@@ -74,7 +74,7 @@ DVIPS = dvips
 ## Funny name due to --cygnus influence; we want to reserve
 ## `install-info' for the user.
 install-info-am: $(INFO_DEPS)
-	$(NORMAL_INSTALL)
+	@$(NORMAL_INSTALL)
 	$(mkinstalldirs) $(infodir)
 	@for file in $(INFO_DEPS); do \
 ## We use these strange circumlocutions because we want the "ifile" to
@@ -86,7 +86,7 @@ install-info-am: $(INFO_DEPS)
 	    else : ; fi; \
 	  done; \
 	done
-	$(POST_INSTALL)
+	@$(POST_INSTALL)
 ## Only run this code if install-info actually exists.
 	@if $(SHELL) -c 'install-info --version' >/dev/null 2>&1; then \
 	  for file in $(INFO_DEPS); do \
