@@ -16,7 +16,7 @@
 ## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 ## 02111-1307, USA.
 install-@DIR@LIBRARIES: $(@DIR@_LIBRARIES)
-	$(NORMAL_INSTALL)
+	@$(NORMAL_INSTALL)
 	$(mkinstalldirs) $(@DIR@dir)
 ## Funny invocation because Makefile variable can be empty, leading to
 ## a syntax error in sh.
@@ -31,7 +31,7 @@ install-@DIR@LIBRARIES: $(@DIR@_LIBRARIES)
 ## $(POST_INSTALL) in the middle of the loop essentially renders it
 ## useless; sh never actually executes this command.  Read the GNU
 ## Standards for a little enlightenment on this.
-	$(POST_INSTALL)
+	@$(POST_INSTALL)
 	@list="$(@DIR@_LIBRARIES)"; for p in $$list; do \
 	  if test -f $$p; then \
 ## Must ranlib after installing because mod time changes.
