@@ -1,3 +1,8 @@
+Thu Mar 27 17:28:47 1997  Tom Tromey  <tromey@cygnus.com>
+
+	* header-vars.am: Change _INSTALL variable definitions to `true'.
+	Updated all users to put `@' before invocation.
+
 Tue Mar 25 22:09:45 1997  Tom Tromey  <tromey@cygnus.com>
 
 	Update to follow GNU Standards:
